feat: 启用yarn workspace管理依赖

--- a/packages/one/package.json
+++ b/packages/one/package.json
@@ -25,5 +25,8 @@
   },
   "bugs": {
     "url": "https://github.com/dy-chensha/dy-monorepo-lerna/issues"
+  },
+  "dependencies": {
+    "classnames": "^2.2.6"
   }
 }
